--- a/config.example.json
+++ b/config.example.json
@@ -1,4 +1,4 @@
 {
-    "authToken": "123456:ABC-DEF1234ghIkl-zyx57W2v1u123ew11",
-    "owner": 34509246
+    "authToken": "1518665927:AAFLEL_Vj5LmLF-1rwlOSrNxvzhzmvEUkuw",
+    "owner": 678914268
 }
